Fixed Long and Double to int conversion in AvwapConsumer for Java 21 compatibility