@@ -96,8 +96,8 @@ public class MarketPulseConsumer implements
         broadcaster.setProviderStatusListener(new ProviderStatusListener() {
             @Override
             public void providerUpdateGenerator(String providerName, String providerId, GeneratorInfo generator, boolean isOnline) {
-                log("INFO", String.format("Provider update: %s, generator: %s, online: %s",
-                    providerName, generator != null ? generator.getGeneratorName() : "null", isOnline));
+                log("INFO", "Provider update: %s, generator: %s, online: %s".formatted(
+                        providerName, generator != null ? generator.getGeneratorName() : "null", isOnline));
 
                 if (isWorking.get()) {
                     ExecutorsUtilities.getExecutor().submit(() -> {
@@ -243,8 +243,7 @@ public class MarketPulseConsumer implements
         try {
             // Check time window first
             Object timeObj = getFieldValue(event, "time");
-            if (timeObj instanceof Long) {
-                long eventTime = (Long) timeObj;
+            if (timeObj instanceof Long eventTime) {
                 if (!isWithinTradingWindow(eventTime)) {
                     log("DEBUG", "MarketPulseEvent outside trading window, skipping");
                     return;
@@ -262,8 +261,7 @@ public class MarketPulseConsumer implements
 
             // Extract price and convert
             Object priceObj = getFieldValue(event, "price");
-            if (priceObj instanceof Integer) {
-                int tickPrice = (Integer) priceObj;
+            if (priceObj instanceof Integer tickPrice) {
                 double actualPrice = convertPrice(tickPrice, instrument);
                 pulseData.put("price", actualPrice);
             } else {
@@ -288,13 +286,13 @@ public class MarketPulseConsumer implements
             pulseEvents.add(pulseData);
             int count = totalCount.incrementAndGet();
 
-            String logMsg = String.format("[PULSE #%d] %s @ %s, volume=%s, delta=%s, intensity=%s",
-                count,
-                pulseData.getOrDefault("side", "N/A"),
-                formatNumber(pulseData.get("price")),
-                formatNumber(pulseData.get("volume")),
-                formatNumber(pulseData.get("delta")),
-                formatNumber(pulseData.get("intensity"))
+            String logMsg = "[PULSE #%d] %s @ %s, volume=%s, delta=%s, intensity=%s".formatted(
+                    count,
+                    pulseData.getOrDefault("side", "N/A"),
+                    formatNumber(pulseData.get("price")),
+                    formatNumber(pulseData.get("volume")),
+                    formatNumber(pulseData.get("delta")),
+                    formatNumber(pulseData.get("intensity"))
             );
 
             log("PULSE", logMsg);
@@ -346,8 +344,8 @@ public class MarketPulseConsumer implements
     }
 
     private void setDoubleOrNull(PreparedStatement pstmt, int index, Object value) throws SQLException {
-        if (value instanceof Number) {
-            pstmt.setDouble(index, ((Number) value).doubleValue());
+        if (value instanceof Number number) {
+            pstmt.setDouble(index, number.doubleValue());
         } else {
             pstmt.setNull(index, java.sql.Types.REAL);
         }
@@ -395,7 +393,7 @@ public class MarketPulseConsumer implements
             field.setAccessible(true);
             try {
                 Object value = field.get(event);
-                log("INSPECT", String.format("  %s = %s", field.getName(), value));
+                log("INSPECT", "  %s = %s".formatted(field.getName(), value));
             } catch (Exception e) {
                 // Ignore
             }
@@ -458,7 +456,7 @@ public class MarketPulseConsumer implements
     }
 
     private void log(String level, String message) {
-        String logLine = String.format("[%s] [%s] %s", dateFormat.format(new Date()), level, message);
+        String logLine = "[%s] [%s] %s".formatted(dateFormat.format(new Date()), level, message);
         Log.info(logLine);
 
         try (FileWriter writer = new FileWriter(LOG_PATH, true)) {
@@ -494,8 +492,8 @@ public class MarketPulseConsumer implements
 
     private String formatNumber(Object o) {
         if (o == null) return "N/A";
-        if (o instanceof Number) {
-            return String.format("%.2f", ((Number) o).doubleValue());
+        if (o instanceof Number number) {
+            return "%.2f".formatted(number.doubleValue());
         }
         return o.toString();
     }
@@ -524,7 +522,7 @@ public class MarketPulseConsumer implements
     public void onInstrumentAdded(String alias, InstrumentInfo instrumentInfo) {
         instrumentsInfo.put(alias, instrumentInfo);
         instrumentPips.put(alias, instrumentInfo.pips);
-        log("INFO", String.format("Instrument added: %s (pips=%.8f)", alias, instrumentInfo.pips));
+        log("INFO", "Instrument added: %s (pips=%.8f)".formatted(alias, instrumentInfo.pips));
     }
 
     @Override
